--- a/IslahGroup.DotNot.DataAccessLayer/IslahGroup.DotNot.DataAccessLayer.csproj
+++ b/IslahGroup.DotNot.DataAccessLayer/IslahGroup.DotNot.DataAccessLayer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FAA70930-439E-44E2-BF0A-E398CBEE342F}</ProjectGuid>
+    <ProjectGuid>{8E6E1650-B89D-48A7-8465-CEA70BD54D10}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IslahGroup.DotNet.BusinessLogicLayer</RootNamespace>
-    <AssemblyName>IslahGroup.DotNet.BusinessLogicLayer</AssemblyName>
+    <RootNamespace>IslahGroup.DotNot.DataAccessLayer</RootNamespace>
+    <AssemblyName>IslahGroup.DotNot.DataAccessLayer</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MemberLogic.cs" />
+    <Compile Include="MemberData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
