--- a/IslahGroup.DotNot.DataAccessLayer/IslahGroup.DotNet.DataAccessLayer.csproj
+++ b/IslahGroup.DotNot.DataAccessLayer/IslahGroup.DotNet.DataAccessLayer.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,6 +43,15 @@
   <ItemGroup>
     <Compile Include="MemberData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.Config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IslahGroup.DotNet.EntityLayer\IslahGroup.DotNet.EntityLayer.csproj">
+      <Project>{F327ABE5-2B2F-4341-BBF2-4943D2750F8F}</Project>
+      <Name>IslahGroup.DotNet.EntityLayer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
