Member file renamed to IGUser in DAL & BLL

--- a/IslahGroup.DotNot.DataAccessLayer/IslahGroup.DotNet.DataAccessLayer.csproj
+++ b/IslahGroup.DotNot.DataAccessLayer/IslahGroup.DotNet.DataAccessLayer.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MemberData.cs" />
+    <Compile Include="IGUserData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
