--- a/IslahGroup.DotNet.BusinessLogicLayer/IslahGroup.DotNet.BusinessLogicLayer.csproj
+++ b/IslahGroup.DotNet.BusinessLogicLayer/IslahGroup.DotNet.BusinessLogicLayer.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MemberLogic.cs" />
+    <Compile Include="IGUserLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
