--- a/IslahGroup.DotNet.EntityLayer/IslahGroup.DotNet.EntityLayer.csproj
+++ b/IslahGroup.DotNet.EntityLayer/IslahGroup.DotNet.EntityLayer.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IGUser.cs" />
+    <Compile Include="Introducer.cs" />
     <Compile Include="Member.cs" />
     <Compile Include="Nominee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
