--- a/IslahGroup/IslahGroup.csproj
+++ b/IslahGroup/IslahGroup.csproj
@@ -88,6 +88,7 @@
     <Content Include="Images\landing_page\boss.png" />
     <Content Include="Images\landing_page\donate.png" />
     <Content Include="Images\landing_page\hospital.png" />
+    <Content Include="Images\landing_page\map.png" />
     <Content Include="Images\landing_page\mosque.png" />
     <Content Include="Images\landing_page\shop.png" />
     <Content Include="Masters\MainSite.Master" />
