StoreProcedure file add & Member updated to Owner

--- a/IslahGroup.DotNet.BusinessLogicLayer/IslahGroup.DotNet.BusinessLogicLayer.csproj
+++ b/IslahGroup.DotNet.BusinessLogicLayer/IslahGroup.DotNet.BusinessLogicLayer.csproj
@@ -41,7 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IGUserLogic.cs" />
-    <Compile Include="MemberLogic.cs" />
+    <Compile Include="OwnerLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
