--- a/IslahGroup.DotNot.DataAccessLayer/IslahGroup.DotNet.DataAccessLayer.csproj
+++ b/IslahGroup.DotNot.DataAccessLayer/IslahGroup.DotNet.DataAccessLayer.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IGUserData.cs" />
     <Compile Include="InvestorData.cs" />
     <Compile Include="MemberData.cs" />
+    <Compile Include="MemberDepositData.cs" />
     <Compile Include="OwnerData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
