--- a/IslahGroup/IslahGroup.csproj
+++ b/IslahGroup/IslahGroup.csproj
@@ -75,6 +75,7 @@
     <Content Include="Admin\Investors.aspx" />
     <Content Include="Admin\Login.aspx" />
     <Content Include="Admin\Logout.aspx" />
+    <Content Include="Admin\Management.aspx" />
     <Content Include="Admin\MemberDetails.aspx" />
     <Content Include="Admin\MemberHalts.aspx" />
     <Content Include="Admin\MemberRequests.aspx" />
@@ -231,6 +232,13 @@
     </Compile>
     <Compile Include="Admin\Logout.aspx.designer.cs">
       <DependentUpon>Logout.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\Management.aspx.cs">
+      <DependentUpon>Management.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Management.aspx.designer.cs">
+      <DependentUpon>Management.aspx</DependentUpon>
     </Compile>
     <Compile Include="Admin\MemberDetails.aspx.cs">
       <DependentUpon>MemberDetails.aspx</DependentUpon>
