--- a/IslahGroup/IslahGroup.csproj
+++ b/IslahGroup/IslahGroup.csproj
@@ -126,6 +126,7 @@
     <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff2" />
     <Content Include="Content\font-awesome\fonts\FontAwesome.otf" />
+    <Content Include="Content\bootstrap.css.map" />
     <None Include="packages.config" />
     <Content Include="RegisterMember.aspx" />
     <Content Include="Scripts\blueimp-gallery-fullscreen.js" />
@@ -145,6 +146,7 @@
     <Content Include="Scripts\form-js\jquery.backstretch.js" />
     <Content Include="Scripts\form-js\jquery.backstretch.min.js" />
     <None Include="Properties\PublishProfiles\IslahGroup.pubxml" />
+    <Content Include="Scripts\bootstrap.js.map" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
