--- a/IslahGroup/IslahGroup.csproj
+++ b/IslahGroup/IslahGroup.csproj
@@ -113,6 +113,7 @@
     <Content Include="ImageGallery.aspx" />
     <Content Include="Images\admin_page\boy.png" />
     <Content Include="Images\favicon.ico" />
+    <Content Include="Images\islah_logo.png" />
     <Content Include="Images\landing_page\boss.png" />
     <Content Include="Images\landing_page\donate.png" />
     <Content Include="Images\landing_page\hospital.png" />
@@ -159,7 +160,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Default.aspx" />
     <Content Include="Global.asax" />
-    <Content Include="Images\islah_logo.png" />
+    <Content Include="Images\islah_logo_old.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-3.0.0.js" />
