Owner about gallery successfully add

--- a/IslahGroup.DotNot.DataAccessLayer/IslahGroup.DotNet.DataAccessLayer.csproj
+++ b/IslahGroup.DotNot.DataAccessLayer/IslahGroup.DotNet.DataAccessLayer.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CMSData.cs" />
     <Compile Include="ExpenditureData.cs" />
     <Compile Include="IDatabaseAccessable.cs" />
     <Compile Include="DBConn.cs" />
