--- a/IslahGroup.DotNet.BusinessLogicLayer/IslahGroup.DotNet.BusinessLogicLayer.csproj
+++ b/IslahGroup.DotNet.BusinessLogicLayer/IslahGroup.DotNet.BusinessLogicLayer.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CMSLogic.cs" />
     <Compile Include="ExpenditureLogic.cs" />
     <Compile Include="IGUserLogic.cs" />
     <Compile Include="InvestLogic.cs" />
