--- a/IslahGroup/IslahGroup.csproj
+++ b/IslahGroup/IslahGroup.csproj
@@ -91,6 +91,7 @@
     <Content Include="Admin\UpdateDeposit.aspx" />
     <Content Include="Admin\UpdateExpenditure.aspx" />
     <Content Include="Admin\UpdateInvest.aspx" />
+    <Content Include="CMS\Default.aspx" />
     <Content Include="Contact.aspx" />
     <Content Include="Content\animate.css" />
     <Content Include="Content\animate.min.css" />
@@ -134,6 +135,7 @@
     <Content Include="Content\font-awesome\fonts\fontawesome-webfont.woff2" />
     <Content Include="Content\font-awesome\fonts\FontAwesome.otf" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="Masters\CMSMaster.Master" />
     <None Include="packages.config" />
     <Content Include="RegisterMember.aspx" />
     <Content Include="Scripts\blueimp-gallery-fullscreen.js" />
@@ -359,6 +361,13 @@
     <Compile Include="Admin\UpdateInvest.aspx.designer.cs">
       <DependentUpon>UpdateInvest.aspx</DependentUpon>
     </Compile>
+    <Compile Include="CMS\Default.aspx.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="CMS\Default.aspx.designer.cs">
+      <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Contact.aspx.cs">
       <DependentUpon>Contact.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -389,6 +398,13 @@
     </Compile>
     <Compile Include="Masters\AdminSite.Master.designer.cs">
       <DependentUpon>AdminSite.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Masters\CMSMaster.Master.cs">
+      <DependentUpon>CMSMaster.Master</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Masters\CMSMaster.Master.designer.cs">
+      <DependentUpon>CMSMaster.Master</DependentUpon>
     </Compile>
     <Compile Include="Masters\MainSite.Master.cs">
       <DependentUpon>MainSite.Master</DependentUpon>
